--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8888
-spring.cloud.config.server.git.uri=ssh://localhost/config-repo
+spring.cloud.config.server.git.uri=https://github.com/johan-steffens/makola-exercise-config
 spring.cloud.config.server.git.clone-on-start=true
 security.user.name=root
 security.user.password=at0m1c
